risc0/zirgen/dsl/test/locals.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error:
// CHECK-SAME: no member named
// CHECK-SAME: _local

component Foo() {
  _local := Reg(5);
  _local
}

test {
  Foo()._local
}
